update: change ParentVPCStack reference to Devfolio-Networks in ALB, database, and ECS configurations

--- a/infra/deploy/alb.yml
+++ b/infra/deploy/alb.yml
@@ -1,4 +1,4 @@
 template-file-path: infra/templates/alb.yml
 parameters:
-  ParentVPCStack: Devfolio-VPC
+  ParentVPCStack: Devfolio-Networks
 tags: {}
