--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -17,6 +17,7 @@ jobs:
     uses: ./.github/workflows/deploy-template.yml
     with:
       APP_NAME: auth
+      AWS_REGION: eu-west-1
     secrets:
       AWS_ROLE: ${{ secrets.AWS_ROLE }}
       REPOSITORY: devfolio/auth
