--- a/infra/deploy/ecs.yml
+++ b/infra/deploy/ecs.yml
@@ -1,5 +1,4 @@
 template-file-path: infra/templates/ecs.yml
 parameters:
-  ParentVPCStack: Devfolio-Networks
-  # ParentALBStack: Devfolio-LB
+  ParentVPCStack: Devfolio-ASG
 tags: {}
